--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -5,6 +5,7 @@
     android:notificationTimeout="100"
     android:canRetrieveWindowContent="true"
     android:settingsActivity=".MainActivity"
+    android:accessibilityFlags="flagReportViewIds|flagRetrieveInteractiveWindows"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 </accessibility-service>
